# borzoi

./: .gitignore  README.md  download_models.sh  env_vars.sh  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: python-black.yml  python-pytest.yml
examples/: .gitignore  CD99_example.gtf  CFHR2_example.gtf  GCFC2_example.gtf  borzoi_example_eqtl_chr10_116952944_T_C.ipynb  borzoi_example_eqtl_chr10_116952944_T_C_fancy.ipynb  borzoi_example_ipaqtl_chr10_116664061_G_A.ipynb  borzoi_example_paqtl_chr1_236763042_A_G.ipynb  borzoi_example_paqtl_chr1_236763042_A_G_fancy.ipynb  borzoi_example_sqtl_chr9_135548708_G_C.ipynb  borzoi_helpers.py  params.json  params_pred.json  targets_gtex.txt  targets_gtex_liver.txt  targets_human.txt  targets_mouse.txt  targets_rna.txt
src/borzoi/: __init__.py
src/borzoi/helpers/: h5_grad_utils.py
src/borzoi/scripts/: borzoi_satg_gene_gpu.py
src/notebooks/: borzoi_snp.ipynb
src/scripts/: basenji_bench_classify.py  basenji_bench_gtex_folds.py  basenji_gtex_coef.py  basenji_sad.py  borzoi_apa_ism_cov3.py  borzoi_apa_ism_cov3_multi.py  borzoi_apa_ism_prop3.py  borzoi_apa_ism_prop3_multi.py  borzoi_bench_classify.py  borzoi_bench_crispr.py  borzoi_bench_crispr_folds.py  borzoi_bench_flowfish_folds.py  borzoi_bench_gasperini_folds.py  borzoi_bench_gtex_folds.py  borzoi_bench_gtex_folds_sad.py  borzoi_bench_gtex_folds_sed.py  borzoi_bench_ipaqtl_folds.py  borzoi_bench_paqtl_folds.py  borzoi_bench_sqtl_folds.py  borzoi_bench_sqtl_folds_shift.py  borzoi_bench_trip_folds.py  borzoi_gtex_coef.py  borzoi_gtex_coef_sad.py  borzoi_gtex_coef_sed.py  borzoi_sad.py  borzoi_sad_folds.py  borzoi_satg_gene.py  borzoi_satg_gene_crispr_ism_shuffle.py  borzoi_satg_gene_focused_ism.py  borzoi_satg_gene_gpu.py  borzoi_satg_gene_gpu_crispr_ism_shuffle.py  borzoi_satg_gene_gpu_focused_ism.py  borzoi_satg_gene_multi.py  borzoi_satg_gene_smooth.py  borzoi_satg_polya.py  borzoi_satg_polya_gpu.py  borzoi_satg_splice.py  borzoi_satg_splice_gpu.py  borzoi_sed.py  borzoi_sed_folds.py  (+27 more)
src/scripts/_archive/: borzoi_bench_crispr_folds.py  borzoi_satg_gene.py
src/scripts/data/qtl_data/: README.md  download_finemap.py  download_sumstat.py  ipaqtl_make_negative_sets.py  ipaqtl_make_positive_sets.py  ipaqtl_vcfs.py  make_expression_tables.py  make_vcfs.py  merge_finemapping_tables.py  paqtl_make_negative_sets.py  paqtl_make_positive_sets.py  paqtl_vcfs.py  sqtl_make_negative_sets.py  sqtl_make_positive_sets.py  sqtl_vcfs.py
src/scripts/data/training_data/: Makefile  README.md
tutorials/latest/analyze_sv/: README.md  analyze_indel.sh  analyze_vcf.py  download_dependencies_STR.sh  download_dependencies_SV.sh  save_STR_vcf.py  score_STRs.sh  score_tandem_repeats.py  utils.py
tutorials/latest/analyze_sv/data/: STR.csv  chr6_41897087_SV.vcf
tutorials/latest/analyze_sv/out_STR/: chr10_71984971_GTEx.csv  chr10_71984971_esophagus.csv  chr1_28250548_GTEx.csv  chr1_28250548_lung.csv
tutorials/latest/analyze_sv/temp/: chr6_41897088-GTEx-all.html  chr6_41897088-RNA-adipose.html  chr6_41897088-RNA-adrenal.html  chr6_41897088-RNA-bladder.html  chr6_41897088-RNA-blood.html  chr6_41897088-RNA-brain.html  chr6_41897088-RNA-breast.html  chr6_41897088-RNA-cervix.html  chr6_41897088-RNA-colon.html  chr6_41897088-RNA-esophagus.html  chr6_41897088-RNA-fallopian.html  chr6_41897088-RNA-heart.html  chr6_41897088-RNA-kidney.html  chr6_41897088-RNA-liver.html  chr6_41897088-RNA-lung.html  chr6_41897088-RNA-muscle.html  chr6_41897088-RNA-nerve.html  chr6_41897088-RNA-ovary.html  chr6_41897088-RNA-pancreas.html  chr6_41897088-RNA-pituitary.html  chr6_41897088-RNA-prostate.html  chr6_41897088-RNA-salivary.html  chr6_41897088-RNA-skin.html  chr6_41897088-RNA-small.html  genes_intersect.bed  (+8 more)
tutorials/latest/interpret_sequence/: HBE1_example.gtf  README.md  explore_grads_k562_HBE1.ipynb  run_gradients_expr_HBE1.sh
tutorials/latest/make_data/: Makefile  README.md  process_w5.sh  targets_human.txt
tutorials/latest/score_variants/: README.md  run_variant_scripts.ipynb  score_expr_sad.sh  score_expr_sed.sh  score_polya.sh  score_splice.sh  snps_polya.vcf  snps_splice.vcf
tutorials/latest/train_model/: README.md  params_micro.json  params_mini.json  train_mini.sh
tutorials/legacy/interpret_sequence/: README.md  explore_grads_liver_CFHR2.ipynb  explore_polya_grads_CD99.ipynb  explore_splice_grads_GCFC2.ipynb  run_gradients_expr_CFHR2.sh  run_gradients_polya_CD99.sh  run_gradients_splice_GCFC2.sh  vis_helpers.py
tutorials/legacy/make_data/: Makefile  README.md  download_bw.sh  download_dependencies.sh
tutorials/legacy/score_variants/: README.md  run_variant_scripts.ipynb  score_expr_sad.sh  score_expr_sed.sh  score_polya.sh  score_splice.sh  snps_expr.vcf
tutorials/legacy/train_model/: README.md  params_micro.json  params_mini.json  train_micro.sh
