[metadata]
name = calicolabs-$PYTHON_PACKAGE_NAME
author = Calico Data Engineering Team
author_email = calico-data-eng@calicolabs.com
description = $PYTHON_PACKAGE_NAME
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/calico/$REPO_NAME
project_urls =
    Bug Tracker = https://github.com/calico/$REPO_NAME/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
;install_requires =
;    package==3.17.0
;    package2==3.15.1

[options.extras_require]
dev =
    black==22.3.0
    pytest==7.1.2

[options.packages.find]
where = src
