[metadata]
name = calicolabs-borzoi
author = David Kelley
author_email = drk@calicolabs.com
description = Machine learning methods for DNA sequence analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/calico/borzoi
project_urls =
    Bug Tracker = https://github.com/calico/borzoi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <3.11
install_requires =
    h5py~=3.7.0
    intervaltree~=3.1.0
    matplotlib~=3.7.1
    numpy~=1.24.3
    pandas~=1.5.3
    pybigwig~=0.3.18
    pysam~=0.21.0
    pybedtools~=0.9.0
    seaborn~=0.12.2
    scikit-learn~=1.2.2
    scipy~=1.9.1
    tensorflow~=2.10.0
    pyfaidx~=0.7.1
#    baskerville==0.0.1

[options.extras_require]
dev =
    black==22.3.0
    pytest==7.1.2

[options.packages.find]
where = src
